feat: PUBLIC_READ 제거 + Cloudflare R2 지원 (#64) (#64)
모든 업로드가 ObjectCannedACL.PUBLIC_READ 였다.
과제 제출물과 회의 요약본(수업 STT 전문)이 주소만 알면 열렸다.
주소는 DB 에 저장되고 API 응답으로 나갔다. UUID 가 붙어 있지만 그건
security by obscurity 다.

R2 로 옮기는 것과 이 문제는 분리할 수 없다. R2 는 객체 ACL 을 지원하지 않아
옮기는 순간 전부 비공개가 되고, 저장된 주소가 그대로 403 이 된다.
읽기를 프리사인으로 바꾸는 것이 선택이 아니라 전제다.

- ACL 제거 4곳
- 읽기 링크를 15분 프리사인 URL 로. 첨부·썸네일·요약본 전부
- 주소 생성을 엔드포인트 인식으로. https://{bucket}.s3.{region}.amazonaws.com 이
  하드코딩돼 있었고 그 문자열이 DB 에 저장됐다. 스토리지를 바꾸면
  저장된 데이터에 박힌 도메인 때문에 파일을 못 찾는다.
- 예전 AWS 주소에서도 키를 뽑는다. 기존 데이터를 마이그레이션하지 않고 읽는다.

테스트가 진짜 버그를 잡았다. S3Client 에만 forcePathStyle 을 주고
S3Presigner 에 빠뜨려서 서명된 주소가 가상 호스트 스타일로 나왔다.
R2 는 그 형식을 받지 않으므로 링크가 전부 깨졌을 것이다.

테스트 223개 통과